# hw11

./: CMakeLists.txt  README.md  run.sh
in/: config.h.in
legacy/: CMakeLists.txt  legacy.c
mylib/: CMakeLists.txt
mylib/mylib/: mylib.cpp  mylib.h
src/: config.h  main.cpp  veryusefulfile.cpp
